tests/dataset/tpc-ds/compiler/pl/q25.error
run: exit status 2
[
  {
    "catalog_sales_profit":0,
    "i_item_desc":"Desc2",
    "i_item_id":"ITEM2",
    "s_store_id":"S1",
    "s_store_name":"Store1",
    "store_returns_loss":0,
    "store_sales_profit":0
  },
  {
    "catalog_sales_profit":0,
    "i_item_desc":"Desc1",
    "i_item_id":"ITEM1",
    "s_store_id":"S1",
    "s_store_name":"Store1",
    "store_returns_loss":0,
    "store_sales_profit":0
  }
]
ERROR: /tmp/q25.pl:58: user:main Unknown message: error('expect failed')
